// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay Component fixed should render Overlay with CTA 1`] = `
<FixedBox
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <CTABrick
      color="blue"
      label="Learn more"
    />
  </TextBox>
</FixedBox>
`;

exports[`Overlay Component fixed should render Overlay with Text 1`] = `
<FixedBox
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Subheader
      color="blue"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Discover the new CoreMedia Headless Services.",
        }
      }
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
          "typography": Object {
            "title6": Object {
              "color": "#000",
              "fontFamily": "Helvetica, Arial, sans-serif",
              "fontSize": "1rem",
              "fontWeight": 300,
              "lineHeight": "1.1em",
              "textTransform": "uppercase",
            },
          },
        }
      }
    />
  </TextBox>
</FixedBox>
`;

exports[`Overlay Component fixed should render Overlay with Text and CTA 1`] = `
<FixedBox
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Subheader
      color="blue"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Discover the new CoreMedia Headless Services.",
        }
      }
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
          "typography": Object {
            "title6": Object {
              "color": "#000",
              "fontFamily": "Helvetica, Arial, sans-serif",
              "fontSize": "1rem",
              "fontWeight": 300,
              "lineHeight": "1.1em",
              "textTransform": "uppercase",
            },
          },
        }
      }
    />
    <CTABrick
      color="blue"
      label="Learn more"
    />
  </TextBox>
</FixedBox>
`;

exports[`Overlay Component fixed should render Overlay with Title 1`] = `
<FixedBox
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Header
      color="blue"
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      Content Management at a new Scale with CoreMedia CaaS
    </Header>
  </TextBox>
</FixedBox>
`;

exports[`Overlay Component fixed should render Overlay with Title and CTA 1`] = `
<FixedBox
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Header
      color="blue"
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      Content Management at a new Scale with CoreMedia CaaS
    </Header>
    <CTABrick
      color="blue"
      label="Learn more"
    />
  </TextBox>
</FixedBox>
`;

exports[`Overlay Component fixed should render Overlay with Title and Text 1`] = `
<FixedBox
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Header
      color="blue"
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      Content Management at a new Scale with CoreMedia CaaS
    </Header>
    <Subheader
      color="blue"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Discover the new CoreMedia Headless Services.",
        }
      }
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
          "typography": Object {
            "title6": Object {
              "color": "#000",
              "fontFamily": "Helvetica, Arial, sans-serif",
              "fontSize": "1rem",
              "fontWeight": 300,
              "lineHeight": "1.1em",
              "textTransform": "uppercase",
            },
          },
        }
      }
    />
  </TextBox>
</FixedBox>
`;

exports[`Overlay Component fixed should render Overlay with Title, Text and CTA 1`] = `
<FixedBox
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Header
      color="blue"
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      Content Management at a new Scale with CoreMedia CaaS
    </Header>
    <Subheader
      color="blue"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Discover the new CoreMedia Headless Services.",
        }
      }
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
          "typography": Object {
            "title6": Object {
              "color": "#000",
              "fontFamily": "Helvetica, Arial, sans-serif",
              "fontSize": "1rem",
              "fontWeight": 300,
              "lineHeight": "1.1em",
              "textTransform": "uppercase",
            },
          },
        }
      }
    />
    <CTABrick
      color="blue"
      label="Learn more"
    />
  </TextBox>
</FixedBox>
`;

exports[`Overlay Component not fixed should render Overlay with CTA 1`] = `
<Box
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <CTABrick
      color="blue"
      label="Learn more"
    />
  </TextBox>
</Box>
`;

exports[`Overlay Component not fixed should render Overlay with Text 1`] = `
<Box
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Subheader
      color="blue"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Discover the new CoreMedia Headless Services.",
        }
      }
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
          "typography": Object {
            "title6": Object {
              "color": "#000",
              "fontFamily": "Helvetica, Arial, sans-serif",
              "fontSize": "1rem",
              "fontWeight": 300,
              "lineHeight": "1.1em",
              "textTransform": "uppercase",
            },
          },
        }
      }
    />
  </TextBox>
</Box>
`;

exports[`Overlay Component not fixed should render Overlay with Text and CTA 1`] = `
<Box
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Subheader
      color="blue"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Discover the new CoreMedia Headless Services.",
        }
      }
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
          "typography": Object {
            "title6": Object {
              "color": "#000",
              "fontFamily": "Helvetica, Arial, sans-serif",
              "fontSize": "1rem",
              "fontWeight": 300,
              "lineHeight": "1.1em",
              "textTransform": "uppercase",
            },
          },
        }
      }
    />
    <CTABrick
      color="blue"
      label="Learn more"
    />
  </TextBox>
</Box>
`;

exports[`Overlay Component not fixed should render Overlay with Title 1`] = `
<Box
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Header
      color="blue"
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      Content Management at a new Scale with CoreMedia CaaS
    </Header>
  </TextBox>
</Box>
`;

exports[`Overlay Component not fixed should render Overlay with Title and CTA 1`] = `
<Box
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Header
      color="blue"
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      Content Management at a new Scale with CoreMedia CaaS
    </Header>
    <CTABrick
      color="blue"
      label="Learn more"
    />
  </TextBox>
</Box>
`;

exports[`Overlay Component not fixed should render Overlay with Title and Text 1`] = `
<Box
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Header
      color="blue"
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      Content Management at a new Scale with CoreMedia CaaS
    </Header>
    <Subheader
      color="blue"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Discover the new CoreMedia Headless Services.",
        }
      }
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
          "typography": Object {
            "title6": Object {
              "color": "#000",
              "fontFamily": "Helvetica, Arial, sans-serif",
              "fontSize": "1rem",
              "fontWeight": 300,
              "lineHeight": "1.1em",
              "textTransform": "uppercase",
            },
          },
        }
      }
    />
  </TextBox>
</Box>
`;

exports[`Overlay Component not fixed should render Overlay with Title, Text and CTA 1`] = `
<Box
  bottom="5%"
  color="blue"
  height="auto"
  theme={
    Object {
      "breakpoints": Object {
        "min": [Function],
      },
      "palette": Object {
        "additional": Object {
          "white": Object {
            "color": "rgb(255,255,255)",
            "text": "rgba(0, 0, 0, 0.87)",
          },
        },
        "common": Object {},
      },
    }
  }
  width={70}
>
  <TextBox>
    <Header
      color="blue"
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
        }
      }
    >
      Content Management at a new Scale with CoreMedia CaaS
    </Header>
    <Subheader
      color="blue"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Discover the new CoreMedia Headless Services.",
        }
      }
      theme={
        Object {
          "palette": Object {
            "additional": Object {
              "white": Object {
                "color": "rgb(255,255,255)",
                "text": "rgba(0, 0, 0, 0.87)",
              },
            },
            "common": Object {},
          },
          "typography": Object {
            "title6": Object {
              "color": "#000",
              "fontFamily": "Helvetica, Arial, sans-serif",
              "fontSize": "1rem",
              "fontWeight": 300,
              "lineHeight": "1.1em",
              "textTransform": "uppercase",
            },
          },
        }
      }
    />
    <CTABrick
      color="blue"
      label="Learn more"
    />
  </TextBox>
</Box>
`;
